# QuadrupedRL

./: .gitignore  .gitmodules  README.md  env.yaml  main.py  restore.py  resume.py  test.py  test_policy.py  test_student.py  test_tg.py  tg_base.pt  train_policy.py  train_student.py  train_tg.py
burl/: __init__.py  bc.py  env.py  motor.py  nn.py  quadruped.py  sensors.py  state.py  terrain.py  transforms.py  utils.py
burl/alg/: __init__.py  ac.py  dagger.py  ppo.py  rollout_storage.py  student.py  tcn.py
burl/depre/: tgnet.py
burl/exp/: __init__.py  parallel_perform.py  resume.py  test_policy.py  test_student.py  train_policy.py  train_student.py
burl/rl/: a2c.py  curriculum.py  imitate.py  multi_env.py  reward.py  runner.py  state.py  task.py  tg.py  train.py
burl/sim/: __init__.py  config.py  env.py  ident.py  identify.py  motor.py  multi_env.py  parallel.py  plugins.py  quadruped.py  sensors.py  state.py  terrain.py  tg.py  tg_net.py
burl/utils/: __init__.py  bc.py  config.py  log.py  math_utils.py  plot.py  transforms.py  udp.py  utils.py
deploy/: CMakeLists.txt  package.xml
deploy/include/: aliengo.hpp  io.hpp  math_utils.hpp  policy.hpp  state.hpp  tg.hpp
deploy/scripts/: joystick_cmd.py
deploy/src/: main.cpp
example/: lctv0.yaml  utils.py
example/loct/: network.py  test.py  train.py  utils.py
example/test/: test_tianshou.py
lib/: env.py  nn.py  quadruped.py  state.py
lib/utils/: __init__.py  motor.py
qdpgym/: __init__.py
qdpgym/sim/: __init__.py  abc.py  app.py  task.py
qdpgym/sim/blt/: env.py  hooks.py  quadruped.py  terrain.py  utils.py
qdpgym/sim/common/: identify.py  motor.py  noisyhandle.py  tg.py
qdpgym/sim/mjc/: env.py  hooks.py  quadruped.py  terrain.py  viewer.py
qdpgym/sim/resources/: acnet_220526.pt  actuator_net_with_history.pt
qdpgym/sim/resources/aliengo/model/: aliengo.xml
qdpgym/tasks/identify/: identify.py
qdpgym/tasks/loct/: __init__.py  app.py  loct.py  reward.py  sr_reward.py  utils.py
qdpgym/tests/: common.py  test_pybullet.py
qdpgym/utils/: tf.py  utils.py
resources/: actuator_net.pt  actuator_net_with_history.pt
resources/urdf/aliengo/urdf/: aliengo.urdf
resources/urdf/anymal_c/urdf/: anymal.urdf
urdf/a1/: a1.urdf
urdf/aliengo/urdf/: aliengo.urdf
urdf/aliengo/xacro/: aliengo.champ.urdf  aliengo.urdf
